[gd_scene load_steps=6 format=2]

[ext_resource path="res://Scripts/WeaponPickup.gd" type="Script" id=1]
[ext_resource path="res://Sprites/Environment/stick.png" type="Texture" id=2]
[ext_resource path="res://audio/sounds/Player/pickup_wood_weapon.wav" type="AudioStream" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 8, 8 )

[sub_resource type="Animation" id=2]
resource_name = "idle"
length = 0.8
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:offset")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.7 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 0, -10 ), Vector2( 0, -20 ), Vector2( 0, 2 ) ]
}

[node name="Stick" type="Area2D"]
collision_layer = 0
collision_mask = 2
script = ExtResource( 1 )
weapon = "stick"
damage = 1000

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 2 )
offset = Vector2( 0, 2 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/idle = SubResource( 2 )

[node name="AudioPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )
volume_db = -4.0
bus = "Sounds"
[connection signal="body_entered" from="." to="." method="_on_Weapon_body_entered"]
[connection signal="finished" from="AudioPlayer" to="." method="_on_AudioPlayer_finished"]
